--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   gtag('config', 'G-8MF5NVWCZ5');
 </script>
     <meta charset="UTF-8">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8794607118520437"
+     crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>曾国藩 - 晚清中兴名臣</title>
     <link rel="stylesheet" href="styles.css">
