--- a/index.html
+++ b/index.html
@@ -182,13 +182,17 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">首页</a></li>
+                <li><a href="#news">新闻快递</a></li>
+                <li><a href="#featured">精选内容</a></li>
                 <li><a href="#biography">生平事迹</a></li>
                 <li><a href="#philosophy">思想理念</a></li>
+                <li><a href="#learning">了解曾国藩</a></li>
                 <li><a href="books.html">著作文献</a></li>
                 <li><a href="videos.html">热门视频</a></li>
                 <li><a href="stories.html">故事集</a></li>
                 <li><a href="#legacy">历史影响</a></li>
                 <li><a href="#faq">常见问题</a></li>
+                <li><a href="#deep-learning">深入学习</a></li>
                 <li><a href="sitemap.html">网站地图</a></li>
             </ul>
             <!-- 收藏按钮 -->
@@ -221,6 +225,56 @@
         </div>
     </section>
 
+    <!-- 新闻快递 -->
+    <section id="news" class="section bg-light">
+        <div class="container">
+            <h2>新闻快递</h2>
+            <ul class="news-list">
+                <li class="news-item">
+                    <span class="news-date">2025-09-01</span>
+                    <a href="#" class="news-link">曾国藩研究新成果发布：家书与现代管理的融合解读</a>
+                </li>
+                <li class="news-item">
+                    <span class="news-date">2025-08-16</span>
+                    <a href="#" class="news-link">湖南双峰举办曾国藩文化周，研讨“慎独·主敬”当代价值</a>
+                </li>
+                <li class="news-item">
+                    <span class="news-date">2025-07-28</span>
+                    <a href="#" class="news-link">新书上架：《曾学十二讲》系统梳理曾国藩思想脉络</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- 精选内容 -->
+    <section id="featured" class="section">
+        <div class="container">
+            <h2>精选内容</h2>
+            <div class="featured-grid">
+                <a class="featured-card" href="#biography">
+                    <i class="fas fa-user"></i>
+                    <h3>人物简介</h3>
+                    <p>生平年表与关键节点，一览曾国藩的传奇轨迹。</p>
+                </a>
+                <a class="featured-card" href="#philosophy">
+                    <i class="fas fa-brain"></i>
+                    <h3>思想精要</h3>
+                    <p>“慎独”“主敬”等修身理念的核心要义。</p>
+                </a>
+                <a class="featured-card" href="books.html">
+                    <i class="fas fa-book"></i>
+                    <h3>著作导览</h3>
+                    <p>《家书》《冰鉴》《挺经》等经典的要点导读。</p>
+                </a>
+                <a class="featured-card" href="videos.html">
+                    <i class="fas fa-photo-video"></i>
+                    <h3>视频精选</h3>
+                    <p>高赞讲解与纪录片，快速入门曾国藩世界。</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <section id="value-proposition" class="section bg-light">
         <div class="container">
             <h2>曾国藩的核心价值</h2>
@@ -245,6 +299,92 @@
         </div>
     </section>
 
+    <!-- 了解曾国藩 / 学习入口 -->
+    <section id="learning" class="section">
+        <div class="container">
+            <h2>了解曾国藩 · 学习入口</h2>
+            <div class="hub-grid">
+                <a class="hub-card" href="#biography">
+                    <div class="hub-icon"><i class="fas fa-stream"></i></div>
+                    <h3>年表</h3>
+                    <p>从乡塾读书到中兴名臣，按时序梳理关键事件。</p>
+                </a>
+                <a class="hub-card" href="#philosophy">
+                    <div class="hub-icon"><i class="fas fa-compass"></i></div>
+                    <h3>修身与经世</h3>
+                    <p>理学渊源与经世致用的统一：知行合一。</p>
+                </a>
+                <a class="hub-card" href="stories.html">
+                    <div class="hub-icon"><i class="fas fa-feather-alt"></i></div>
+                    <h3>轶事故事</h3>
+                    <p>50个故事，体会“勤、恒、诚、敬”的做人法则。</p>
+                </a>
+                <a class="hub-card" href="#legacy">
+                    <div class="hub-icon"><i class="fas fa-university"></i></div>
+                    <h3>历史影响</h3>
+                    <p>政治、文化、教育三维度解析“立德立功立言”。</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- 曾学哲学（专题入口） -->
+    <section id="philosophy-hub" class="section bg-light">
+        <div class="container">
+            <h2>曾学哲学 · 专题</h2>
+            <div class="hub-grid">
+                <a class="hub-card" href="#philosophy">
+                    <div class="hub-icon"><i class="fas fa-leaf"></i></div>
+                    <h3>慎独与主敬</h3>
+                    <p>内在自省与外在敬畏，修身的两大支点。</p>
+                </a>
+                <a class="hub-card" href="books.html">
+                    <div class="hub-icon"><i class="fas fa-search"></i></div>
+                    <h3>识人用人</h3>
+                    <p>《冰鉴》视角解读“知人善任”的方法论。</p>
+                </a>
+                <a class="hub-card" href="books.html">
+                    <div class="hub-icon"><i class="fas fa-home"></i></div>
+                    <h3>齐家之道</h3>
+                    <p>家书中的教育、家风与日常管理智慧。</p>
+                </a>
+                <a class="hub-card" href="videos.html">
+                    <div class="hub-icon"><i class="fas fa-chess-knight"></i></div>
+                    <h3>领导与统御</h3>
+                    <p>湘军组织与领导力，在当代团队中的启发。</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- 深入学习 -->
+    <section id="deep-learning" class="section">
+        <div class="container">
+            <h2>深入学习</h2>
+            <div class="featured-grid">
+                <a class="featured-card" href="books.html">
+                    <i class="fas fa-book-reader"></i>
+                    <h3>出版物</h3>
+                    <p>系统阅读《曾文正公全集》与专题研究著作。</p>
+                </a>
+                <a class="featured-card" href="stories.html">
+                    <i class="fas fa-archive"></i>
+                    <h3>档案与史料</h3>
+                    <p>人物书信、奏折与年谱，深入理解思想生成。</p>
+                </a>
+                <a class="featured-card" href="videos.html">
+                    <i class="fas fa-university"></i>
+                    <h3>数字图书馆</h3>
+                    <p>视频与图文资料汇聚，便捷检索与主题研读。</p>
+                </a>
+                <a class="featured-card" href="sitemap.html">
+                    <i class="fas fa-project-diagram"></i>
+                    <h3>研究索引</h3>
+                    <p>按主题/时间/人物建立索引，快速定位内容。</p>
+                </a>
+            </div>
+        </div>
+    </section>
     <section id="biography" class="section">
         <div class="container">
             <h2>曾国藩生平事迹</h2>
