Improve landing hero image presentation

--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="zengguofan.png" alt="曾国藩像 - 晚清中兴名臣曾国藩肖像">
+                <div class="hero-image-ring" aria-hidden="true"></div>
+                <div class="hero-image-glow" aria-hidden="true"></div>
+                <div class="portrait-container">
+                    <img src="zengguofan.png" class="portrait-image" alt="曾国藩像 - 晚清中兴名臣曾国藩肖像">
+                </div>
             </div>
         </div>
     </section>
