--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>曾国藩</h1>
-                <h2>1811-1872 | 晚清中兴名臣</h2>
-                <p>曾国藩，字伯涵，号涤生，晚清中兴名臣，湘军统帅，理学大师<br>
+                <h1 class="hero-title">曾国藩</h1>
+                <h2 class="hero-subtitle">1811-1872 | 晚清中兴名臣</h2>
+                <p class="hero-description">曾国藩，字伯涵，号涤生，晚清中兴名臣，湘军统帅，理学大师<br>
                 以"修身、齐家、治国、平天下"为己任<br>
                 被誉为"立德、立功、立言"三不朽的完人</p>
                 <div class="hero-buttons">
@@ -220,7 +220,9 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="zengguofan.png" alt="曾国藩像 - 晚清中兴名臣曾国藩肖像">
+                <div class="portrait-container">
+                    <img src="zengguofan.png" alt="曾国藩像 - 晚清中兴名臣曾国藩肖像" class="portrait-image">
+                </div>
             </div>
         </div>
     </section>
